[metadata]
name = loki-client
version = 0.0.5
author = hackhan
author_email = hackhan@xxx.com
description = A Python client interacting with Grafana Loki.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UH-CI/loki-client
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
where = loki_client
